# Android11Snippet

./: settings.gradle  variables.gradle
gradle/wrapper/: gradle-wrapper.properties
post30/: build.gradle
post30/src/androidTest/java/com/example/post30/: ExampleInstrumentedTest.kt
post30/src/main/: AndroidManifest.xml
post30/src/main/cpp/: CMakeLists.txt  ndkImageDecoder.cpp  snippet.cpp
post30/src/main/java/com/example/post30/: Config.kt  MainActivity.kt  Post30Application.kt
post30/src/main/java/com/example/post30/ui/: AppViewModel.kt
post30/src/main/java/com/example/post30/ui/bubbles/: BubbleActivity.kt  BubbleViewModel.kt
post30/src/main/java/com/example/post30/ui/components/: AppBar.kt
post30/src/main/java/com/example/post30/ui/navigation/: Screen.kt
post30/src/main/java/com/example/post30/ui/screen/: MainScreen.kt
post30/src/main/res/layout/: activity_security.xml  window.xml
post30/src/main/res/values/: strings.xml  themes.xml
post30/src/main/res/values-night/: themes.xml
post30/src/test/java/com/example/post30/: ExampleUnitTest.kt
pre30/: build.gradle
pre30/src/androidTest/java/com/example/pre30/: ExampleInstrumentedTest.kt
pre30/src/main/: AndroidManifest.xml
pre30/src/main/java/com/example/pre30/: MainActivity.kt
pre30/src/main/res/layout/: fragment_package_visibility.xml  item_package.xml
pre30/src/main/res/navigation/: nav_graph.xml
pre30/src/main/res/values/: strings.xml  themes.xml
pre30/src/main/res/values-night/: themes.xml
pre30/src/test/java/com/example/pre30/: ExampleUnitTest.kt
(+76 files in other folders)
